# mastersdb

./: CMakeLists.txt  MastersDB.mk  MastersDB.project  README.md  TODO.md
cocomql/: MQL.ATG  Parser.frame  Scanner.frame  compile.sh
demo/: CMakeLists.txt  btree.c  db_create.cpp  db_read.cpp
include/: btree.h  libloader.h  types.h
mastersdb/: CMakeLists.txt  MastersDB.h  MdbDatabase.cpp  MdbResultSet.cpp  btree.c  btree.h  common.h  database.c  libloader.c  libloader.h  mastersdb.c  mastersdb.cpp  mastersdb.h  mdbbtree.c  mdbbtree_util.h  mdbdatabase.c  mdbserver.h  mdbtable.c  mdbtypes.h  test.mrdb
mastersdb/btree/: btree.c  btree.h
mastersdb/database/: database.c  database.h
mastersdb/include/: database.h  mastersdb.h
mastersdb/libloader/: libloader.h
mastersdb/mdb/: CMakeLists.txt  mdb.h  mdbbtree.c  mdbbtree_util.h  mdbdatabase.c  mdbtable.c  mdbtypes.h
mastersdb/mdb/mql/: Buffer.cpp  Buffer.h  CMakeLists.txt  MQLSelect.cpp  MQLSelect.h  Parser.cpp  Parser.h  Scanner.cpp
mastersdb/mdb/mvm/: CMakeLists.txt  MastersDBVM.cpp  MastersDBVM.h  (+6 more)
mastersdb/mdbql/: Buffer.cpp  MQLSelect.cpp  MQLSelect.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h
mastersdb/mdbserver/: .cproject  .project  TODO.txt
mastersdb/mdbvm/: MastersDBVM.cpp  MastersDBVM.h
mastersdb/mqlparser/: MQLCondition.cpp  MQLCondition.h  MQLParseTree.cpp  MQLParseTree.h  MQLStatement.cpp  MQLStatement.h
mastersdb/parser/: MQLParser.cpp  MQLParser.h
src/: btree.c  libloader.c  mastersdb.c
util/iso_8859_tables/: iso2utf8.h
util/libloader/: CMakeLists.txt  libloader.c  libloader.h
(+23 files in other folders)
